--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -138,7 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstructFrameAutoSettersAndGetters.h" />
-    <ClInclude Include="AbstructFrameElement.h" />
+    <ClInclude Include="FrameNode.h" />
     <ClInclude Include="FrameObject.h" />
     <ClInclude Include="Alignment.h" />
     <ClInclude Include="AutoService.h" />
