--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="MouseEvent.h" />
     <ClInclude Include="PanelQueue.h" />
     <ClInclude Include="PanelRepare.h" />
+    <ClInclude Include="PropertyMenu.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="Color.h" />
