--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
@@ -179,6 +179,9 @@
     </ClInclude>
     <ClInclude Include="Controllers.h" />
     <ClInclude Include="PropertyMenu.h" />
+    <ClInclude Include="KeyEvent.h">
+      <Filter>MetaFrameElementsHeaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
