fixed Point class and optimized setters on FrameObject

--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstructFrameAutoSettersAndGetters.h" />
+    <ClInclude Include="Control.h" />
     <ClInclude Include="Controllers.h" />
     <ClInclude Include="FrameObject.h" />
     <ClInclude Include="Alignment.h" />
@@ -195,6 +196,7 @@
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="CheckBox.cpp" />
     <ClCompile Include="Color.cpp" />
+    <ClCompile Include="Control.cpp" />
     <ClCompile Include="Controllers.cpp" />
     <ClCompile Include="Editor.cpp" />
     <ClCompile Include="FrameObject.cpp" />
