--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
@@ -165,6 +165,7 @@
     <ClInclude Include="PropertyMenu.h">
       <Filter>EditorHeaders</Filter>
     </ClInclude>
+    <ClInclude Include="sample.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
